@@ -1473,15 +1473,9 @@ fi # !no_cll_msr
 if [ "${no_frm_trm}" = 'Yes' ]; then 
     nco_opt="${nco_opt} --no_frm_trm"
 fi # !no_frm_trm
-if [ "${add_fll}" = 'Yes' ]; then 
-    rgr_opt="${rgr_opt} --rgr add_fill_value"
-fi # !add_fll
 if [ "${msk_apl}" = 'Yes' ]; then 
     rgr_opt="${rgr_opt} --rgr mask_apply"
 fi # !msk_apl
-if [ "${no_stg_grd}" = 'Yes' ]; then 
-    rgr_opt="${rgr_opt} --rgr no_stagger"
-fi # !no_stg_grd
 if [ -n "${prs_stt_usr}" ]; then 
     if [ "${prs_stt_usr}" != 'mean' ] && [ "${prs_stt_usr}" != 'local' ] && [ "${prs_stt_usr}" != 'local_mean' ] && [ "${prs_stt_usr}" != 'gridcell' ] && [ "${prs_stt_usr}" != 'gridcell_mean' ] && [ "${prs_stt_usr}" != 'natural_values' ]; then
 	prs_stt='mean'
@@ -1503,11 +1497,6 @@ if [ -n "${prs_stt_usr}" ]; then
 	fi # !rnr_thr
     fi # !prs_stt
 fi # !prs_stt_usr
-if [ -n "${rnr_thr}" ]; then 
-    if [ "${rnr_thr}" != 'off' ] && [ "${rnr_thr}" != 'none' ]; then 
-	rgr_opt="${rgr_opt} --rnr_thr=${rnr_thr}"
-    fi # !rnr_thr
-fi # !rnr_thr
 if [ -n "${var_lst}" ]; then 
     if [ "${xcl_flg}" = 'Yes' ]; then
 	nco_var_lst="-x -v ${var_lst}"
@@ -1622,18 +1611,20 @@ if [ "${prc_mpas}" = 'Yes' ]; then
 #	pdq_opt='-a Time,depth,nVertInterfaces,nVertLevels,nVertLevelsP1,maxEdges,MaxEdges2,nCategories,R3,ONE,TWO,FOUR,nEdges,nCells' # 20190806: MPAS LI,O,SI,depth and BGC in one swell foop
 	pdq_opt='-a Time,depth,nVertInterfaces,nVertLevels,nVertLevelsP1,nZBGCTracers,nBioLayersP1,nAlgaeIceLayers,nDisIronIceLayers,nIceLayers,nSnowLayers,maxEdges,MaxEdges2,nCategories,R3,ONE,TWO,FOUR,nEdges,nCells' # 20210226: MPAS LI,O,SI,depth and new SI BGC in one swell foop
     fi # !pdq_opt && pdq_flg
-    if [ -n "${rnr_thr}" ]; then 
-	# rnr_thr='off' in MPAS mode turns-off renormalization
-	if [ "${rnr_thr}" != 'off' ]; then 
-	    rgr_opt="${rgr_opt} --rnr_thr=${rnr_thr}"
-	fi # !rnr_thr
-    elif [ -z "${prs_stt}" ]; then 
-	# Default MPAS behavior (since forever) has been to renormalize
-	rgr_opt="${rgr_opt} --rnr_thr=0.0"
-    fi # !rnr_thr
     # 20181130 No known reason to include staggered grid with regridded MPAS data
-    rgr_opt="${rgr_opt} --rgr no_stagger"
+    no_stg_grd='Yes'
 fi # !mpas
+if [ -n "${rnr_thr}" ]; then 
+    if [ "${rnr_thr}" != 'off' ] && [ "${rnr_thr}" != 'none' ]; then 
+	rgr_opt="${rgr_opt} --rnr_thr=${rnr_thr}"
+    fi # !rnr_thr
+elif [ -z "${prs_stt}" ] && [ "${prc_mpas}" = 'Yes' ]; then 
+    # Default MPAS behavior (since forever) has been to renormalize
+    rgr_opt="${rgr_opt} --rnr_thr=0.0"
+fi # !rnr_thr
+if [ "${no_stg_grd}" = 'Yes' ]; then 
+    rgr_opt="${rgr_opt} --rgr no_stagger"
+fi # !no_stg_grd
 if [ "${prc_typ}" = 'mwf' ]; then 
     [[ ${dbg_lvl} -ge 1 ]] && date_mwf=$(date +"%s")
     # Assume destination grid-files that end in .nc are SCRIP (and thus FV), and .g means Exodus (and thus SE)
@@ -1806,6 +1797,7 @@ if [ "${prc_typ}" = 'cice' ]; then
     sgs_msk='tmask'
     sgs_nrm='100.0'
     prc_cice='Yes'
+    add_fll='Yes'
 fi # !cice
 if [ "${prc_typ}" = 'mpascice' ] || [ "${prc_typ}" = 'mpasseaice' ] || [ "${prc_typ}" = 'mpassi' ]; then 
     # NB: 'mpasseaice' is an exact synonym for 'mpascice' (which should be deprecated)
@@ -1821,7 +1813,11 @@ if [ "${prc_typ}" = 'mpascice' ] || [ "${prc_typ}" = 'mpasseaice' ] || [ "${prc_
     sgs_nrm='1.0'
     prc_mpas='Yes'
     prc_mpascice='Yes'
+    add_fll='Yes'
 fi # !mpascice
+if [ "${add_fll}" = 'Yes' ]; then 
+    rgr_opt="${rgr_opt} --rgr add_fill_value"
+fi # !add_fll
 if [ -n "${sgs_frc}" ] || [ -n "${sgs_frc_usr}" ] || [ "${prc_typ}" = 'sgs' ]; then 
     prc_sgs='Yes'
 fi # !sgs
